# configurable-generator

./: Cargo.toml  Readme.md  palette.ron
example/: Cargo.toml
example/generators/: finalize_water.ron  generator.ron
example/src/: main.rs
example_3d/: Cargo.toml  generator.ron
example_3d/src/: main.rs
generators/: rough_lakes.ron  rough_rivers.ron
src/: lib.rs  main.rs  value.rs
