[package]
name = "configurable_generator"
version = "0.1.0"
edition = "2021"

[features]
default=["parallel"]
parallel=["rayon"]
[dependencies]
anyhow = "1"
lazy-regex = "3"
noise = "0.9"
rand = { version = "0.8.5", features = ["small_rng"]}
rayon = {version = "1", optional=true}
ron = "0.8"
serde = {version = "1", features = ["derive"]}
serde_with = "3.12.0"

