[package]
name = "configurable_generator"
version = "0.1.0"
edition = "2021"

[features]
default=["parallel", "2d"]
parallel=["rayon"]
2d=[]
3d=[]

[dependencies]
anyhow = "1"
dyn-clone = "1.0.18"
erased-serde = "0.4.5"
lazy-regex = "3"
noise = "0.9"
once_cell = "1.20.3"
rand = { version = "0.8.5", features = ["small_rng"]}
rayon = {version = "1", optional=true}
ron = "0.8"
serde = {version = "1", features = ["derive"]}
