[package]
name = "configurable_generator"
version = "0.1.0"
edition = "2021"

[features]
default=["2d"]
2d=[]
3d=[]

[dependencies]
anyhow = "1"
dyn-clone = "1.0.18"
erased-serde = "0.4.5"
lazy-regex = "3"
noise = "0.9"
once_cell = "1"
rand = { version = "0.8.5", features = ["small_rng"]}
ron = "0.8"
serde = {version = "1", features = ["derive"]}
